--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,11 @@ body {
     margin-left: auto;
     margin-right: auto;
     max-width: 800px;
+    font-family: "Favorit", arial, sans-serif;
 }
 
 
 h1 {
-    font-family: "Favorit", arial, sans-serif;
     border: solid 3px #000;
 
     text-align: center;
@@ -24,12 +24,12 @@ nav button {
     height: 75px;
     border: none;
 
-    background-color: #000;
+    background-color: #6E49F7;
     color: white;
 
     display: inline-block;
 
-    font-family: "Favorit", arial, sans-serif;
+    /* font-family: "Favorit", arial, sans-serif; */
     font-size: 24px;
     font-weight:normal;
 
@@ -38,7 +38,7 @@ nav button {
 
 label {
     height: 75px;
-    font-family: "Favorit", arial, sans-serif;
+    /* font-family: "Favorit", arial, sans-serif; */
 }
 
 select {
@@ -48,7 +48,7 @@ select {
     float: right;
 
     /* display: inline-block; */
-    font-family: "Favorit", arial, sans-serif;
+    /* font-family: "Favorit", arial, sans-serif; */
     font-size: 24px;
     border-color: transparent transparent #fff transparent;
     cursor: pointer;
@@ -59,6 +59,13 @@ select {
 
     background-color: #D3D3D3;
 }
+
+
+.hide-button {
+    opacity: 0;
+}
+
+
 
 ul {
     margin: 0;
@@ -101,6 +108,5 @@ li button img {
 
 li h3 {
     font-weight:normal;
-    font-family: "Favorit", arial, sans-serif;
     font-size: 24px;
 }
