--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,7 @@ li button {
     border: none;
     float: right;
     cursor: pointer;
+    background-color: #fff;
 }
 
 li button img {
@@ -181,9 +182,7 @@ select {
     cursor: pointer;
     /* background-color: #6E49F7;
     color: #fff; */
-   }
 
-   form button {
     background-color: #fff;
     color: #000;
    }
