--- a/styles.css
+++ b/styles.css
@@ -94,11 +94,13 @@ li button img {
 li h3 {
     font-weight: normal;
     font-size: 24px;
+    cursor: pointer;
 }
 
 li p {
     margin-top: 0px;
-    font-size: 18px;   
+    font-size: 18px;  
+    cursor: pointer; 
 }
 
 li a {
